# A12_E-CommerceAnalyticsToolkit

./: CMakeLists.txt
include/: api_monitor.hpp  box_optimizer.hpp  cart_analysis.hpp  customer_loyalty.hpp
src/: api_monitor.cpp  box_optimizer.cpp  cart_analysis.cpp  customer_loyalty.cpp  main.cpp
tests/: test.cpp
